Fix bug: adjust the alignment in starred course sidebar

--- a/SUTDTimePlannerFrontend/src/app/app.component.less
+++ b/SUTDTimePlannerFrontend/src/app/app.component.less
@@ -149,3 +149,9 @@ app-timetable {
 #leftSidebarTrigger {
   background: #808080;
 }
+
+.sidebar-enroll-btn {
+  padding: 0px 0px;
+  height: auto;
+}
+
